feat: add sync asset handlers (#68)
* feat: add sync asset handlers

---------
